update of latex_commands_for_html.html to hopefully pass again verify-postprocessing test

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -107,7 +107,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendrlbased##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -118,7 +118,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009 shown only when less than 10 percent were worse and the ERT was better.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendrlbased##
@@ -245,7 +245,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendfixed##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2009 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -257,7 +257,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (24). A &#8595; indicates the same tested against the best algorithm from BBOB 2009. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (24). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2009 shown only when less than 10 percent were worse and the ERT was better.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendfixed##
@@ -380,7 +380,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjfixed##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2016 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2016 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -392,7 +392,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016 shown only when less than 10 percent were worse and the ERT was better.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjfixed##
@@ -518,7 +518,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
 <div class="p"><!----></div>
 ##bbobpptablesmanylegendbiobjrlbased##
 
-        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2016 in
+        Expected runtime (<span class="roman">ERT</span>&nbsp;in number of f-evaluations) divided by the respective best <span class="roman">ERT</span>&nbsp;measured during BBOB-2016 (when finite) in
         different dimensions.
         This <span class="roman">ERT</span>&nbsp;ratio and, in braces as dispersion measure, the half difference between
         10 and 90%-tile of bootstrapped run lengths appear for each algorithm and 
@@ -529,7 +529,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (55). A &#8595; indicates the same tested against the best algorithm from BBOB 2016. Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (55). A &#8593; signifies the number of trials that were worse than the ERT of the best algorithm from BBOB 2016 shown only when less than 10 percent were worse and the ERT was better.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendbiobjrlbased##
@@ -798,7 +798,7 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of evaluati
         Entries, succeeded by a star, are statistically significantly better (according to
         the rank-sum test) when compared to all other algorithms of the table, with
         p = 0.05 or p = 10<sup>&#8722;k</sup> when the number k following the star is larger
-        than 1, with Bonferroni correction by the number of functions (54). A &#8595; indicates the same tested against . Best results are printed in bold.
+        than 1, with Bonferroni correction by the number of functions (54). A &#8593; signifies the number of trials that were worse than the ERT of  shown only when less than 10 percent were worse and the ERT was better.Best results are printed in bold.
 
 <div class="p"><!----></div>
 ##bbobppscatterlegendconstrainedfixed##
@@ -1261,5 +1261,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 09 Mar 2023, 21:20.</small>
+version 4.08.<br />On 14 Mar 2023, 10:46.</small>
 </html>
