finally found my mistake while updating latex_commands_for_html.html (I hope)

--- a/code-postprocessing/cocopp/latex_commands_for_html.html
+++ b/code-postprocessing/cocopp/latex_commands_for_html.html
@@ -52,7 +52,8 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
          Right subplots: ECDF of the best achieved &#8710;f
          for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,... f-evaluations (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
          where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
-         Light brown lines in the background show ECDFs for the most difficult target of 
+         Light brown lines in the background show ECDFs for the most difficult target of all
+            algorithms benchmarked during BBOB-2009.
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendtworlbased##
@@ -189,7 +190,8 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in number of f-evalua
          Right subplots: ECDF of the best achieved &#8710;f
          for running times of 0.5D, 1.2D, 3D, 10D, 100D, 1000D,... f-evaluations (from right to left cycling cyan-magenta-black...) and final &#8710;f-value (red),
          where &#8710;fand <span style="font-family:helvetica">Df</span> denote the difference to the optimal function value. 
-         Light brown lines in the background show ECDFs for the most difficult target of 
+         Light brown lines in the background show ECDFs for the most difficult target of all
+            algorithms benchmarked during BBOB-2009.
 
 <div class="p"><!----></div>
 ##bbobpprldistrlegendtwofixed##
@@ -1261,5 +1263,5 @@ Expected running time (<span class="roman">ERT</span>&nbsp;in log<sub>10</sub> o
 T<sub><span class="small">E</span></sub>X
 by <a href="http://hutchinson.belmont.ma.us/tth/">
 T<sub><span class="small">T</span></sub>H</a>,
-version 4.08.<br />On 14 Mar 2023, 10:46.</small>
+version 4.08.<br />On 14 Mar 2023, 12:43.</small>
 </html>
